[package]
description = "Bindings for Freetype used by Servo"
license = "Apache-2.0 / MIT"
name = "freetype"
version = "0.4.1"
authors = ["The Servo Project Developers"]
documentation = "https://doc.servo.org/freetype/"
repository = "https://github.com/servo/rust-freetype"

[features]
default = ["servo-freetype-sys"]

[lib]
name = "freetype"
crate-type = ["rlib"]

[dependencies]
servo-freetype-sys = { git = "https://github.com/cmr/libfreetype2", branch = "web", optional = true }
libc = "0.2"
